--- a/package.json
+++ b/package.json
@@ -16,29 +16,29 @@
   "author": "ZxBing0066@gmail.com",
   "license": "ISC",
   "dependencies": {
-    "react": "^15.1.0",
-    "react-dom": "^15.1.0",
-    "react-router": "^2.0.1",
-    "react-tap-event-plugin": "^1.0.0",
     "flux": "^2.1.1",
+    "promise": "^7.1.1",
+    "react": "^15.2.1",
+    "react-dom": "^15.2.1",
+    "react-router": "^2.6.0",
+    "react-tap-event-plugin": "^1.0.0",
     "superagent": "^1.8.3",
-    "underscore": "^1.8.3",
-    "promise": "^7.1.1"
+    "underscore": "^1.8.3"
   },
   "devDependencies": {
-    "webpack": "^1.13.1",
-    "webpack-dev-server": "^1.14.1",
-    "mockjs": "^1.0.1-beta2",
-    "style-loader": "^0.13.0",
+    "babel-core": "^6.11.4",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.11.1",
     "css-loader": "^0.23.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
-    "babel-core": "^6.7.0",
-    "babel-loader": "^6.2.4",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-react": "^6.5.0",
+    "mockjs": "^1.0.1-beta2",
     "react-hot-loader": "^1.3.0",
-    "url-loader": "^0.5.7"
+    "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7",
+    "webpack": "^1.13.1",
+    "webpack-dev-server": "^1.14.1"
   },
   "repository": {
     "type": "git",
