--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
   "license": "ISC",
   "dependencies": {
     "flux": "^2.1.1",
+    "material-ui": "^0.15.3",
     "promise": "^7.1.1",
-    "react": "^15.2.1",
-    "react-dom": "^15.2.1",
-    "react-router": "^2.6.0",
+    "react": "^15.3.0",
+    "react-dom": "^15.3.0",
+    "react-redux": "^4.4.5",
+    "react-router": "^2.6.1",
     "react-tap-event-plugin": "^1.0.0",
+    "redux": "^3.5.2",
     "superagent": "^1.8.3",
     "underscore": "^1.8.3"
   },
@@ -35,6 +38,7 @@
     "file-loader": "^0.8.5",
     "mockjs": "^1.0.1-beta2",
     "react-hot-loader": "^1.3.0",
+    "redux-devtools": "^3.3.1",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
     "webpack": "^1.13.1",
